--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 
             <div class="img-gallery">
                 <div class="slides">
-                    <img class="slide" src="./gallery/event1.png">
-                    <img class="slide" src="./gallery/event2.png">
-                    <img class="slide" src="./gallery/event3.png">
-                    <img class="slide" src="./gallery/event4.png">
-                    <img class="slide" src="./gallery/event5.png">
-                    <img class="slide" src="./gallery/event6.png">
-                    <img class="slide" src="./gallery/event7.png">
+                    <img class="slide" src="./event1.png">
+                    <img class="slide" src="./event2.png">
+                    <img class="slide" src="./event3.png">
+                    <img class="slide" src="./event4.png">
+                    <img class="slide" src="./event5.png">
+                    <img class="slide" src="./event6.png">
+                    <img class="slide" src="./event7.png">
                 </div>
             </div>
 
