--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="menu-icons">
                    <a>Departments</a>
-                   <a>Past Events</a>
+                   <a>Upcoming Events</a>
                    <a>Alumini</a>
                    <a>About</a>
                 </div>
@@ -31,7 +31,7 @@
                 <img src="./NakshatraMain.png">
                 <h1>NAKSHATRA</h1>
                 <h3>"Astronomy is the language that translates the whispers of the cosmos"</h3>
-                <h2>Photo Gallery</h2>
+                <h2>Past Events</h2>
             </div>
 
             <div class="gallery-details">
@@ -102,13 +102,19 @@
                 </div>
 
                 <div class="col-2">
-                    <p>Made with ♥<br>by <br> Atharv Mehrotra <br> for <br>Nakshatra</p>
+                    <a>Home</a>
+                    <a>GYANSUTRA</a>
+                    <a>Membership</a>
+                    <a>Collaborations</a>
+                    <a>Astronomy Calendar</a>
+                    <a>FAQs</a>
                 </div>
 
                 <div class="col-3">
                     <h3>CONTACT</h3>
                     <p>Netaji Subhash University of Technology,<br> New Delhi 110078</p>
                 </div>
+                <p style="position: absolute; bottom: 20px; text-align: left;">Made with ♥ by Atharv Mehrotra for Nakshatra</p>
             </footer>  
         </div>
 
